--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
     
     <!--Archivo CSS -->
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
      <header>
@@ -196,4 +196,5 @@
         <p>&copy;2026 - Sara Jiménez</p>
     </footer>
 </body>
+
 </html>
